--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,12 @@ deps =
     pytest-cov
     {[testenv]deps}
 commands = py.test --cov=carbon {posargs}
+
+[testenv:coveralls]
+passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
+deps =
+    coveralls
+    {[testenv:coverage]deps}
+commands =
+    py.test --cov=carbon
+    coveralls
