--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ commands = py.test {posargs:--tb=short}
 deps =
     pytest
     mock
+    requests-mock
     -r{toxinidir}/requirements.txt
 
 [testenv:clean]
