--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ skipsdist = True
 commands = py.test {posargs:--tb=short}
 deps =
     pytest
+    pyyaml
     mock
     requests-mock
     -r{toxinidir}/requirements.txt
