--- a/tests/fixtures/data.yml
+++ b/tests/fixtures/data.yml
@@ -16,7 +16,7 @@ orcid:
     ORCID: http://example.com/1
 dlc:
     HR_ORG_UNIT_ID: "1"
-    HR_ORG_LEVEL4_NAME: Chemistry
+    DLC_NAME: Chemistry
     ORG_HIER_SCHOOL_AREA_NAME: SCIENCE AREA
 ---
 person:
@@ -36,7 +36,7 @@ orcid:
     ORCID: http://example.com/2
 dlc:
     HR_ORG_UNIT_ID: "01239"
-    HR_ORG_LEVEL4_NAME: Nuclear Science
+    DLC_NAME: Nuclear Science
     ORG_HIER_SCHOOL_AREA_NAME: ENGINEERING AREA
 ---
 person:
@@ -55,7 +55,7 @@ orcid:
     ORCID: http://example.com/3
 dlc:
     HR_ORG_UNIT_ID: "3"
-    HR_ORG_LEVEL4_NAME: Nuclear Science
+    DLC_NAME: Nuclear Science
     ORG_HIER_SCHOOL_AREA_NAME: ENGINEERING AREA
 ---
 person:
@@ -74,7 +74,7 @@ orcid:
     ORCID: http://example.com/4
 dlc:
     HR_ORG_UNIT_ID: "4"
-    HR_ORG_LEVEL4_NAME: Nuclear Science
+    DLC_NAME: Nuclear Science
     ORG_HIER_SCHOOL_AREA_NAME: ENGINEERING AREA
 ---
 person:
@@ -93,7 +93,7 @@ orcid:
     ORCID: http://example.com/5
 dlc:
     HR_ORG_UNIT_ID: "5"
-    HR_ORG_LEVEL4_NAME: Nuclear Science
+    DLC_NAME: Nuclear Science
     ORG_HIER_SCHOOL_AREA_NAME: ENGINEERING AREA
 ---
 person:
@@ -112,5 +112,5 @@ orcid:
     ORCID: http://example.com/6
 dlc:
     HR_ORG_UNIT_ID: "6"
-    HR_ORG_LEVEL4_NAME: Nuclear Science
+    DLC_NAME: Nuclear Science
     ORG_HIER_SCHOOL_AREA_NAME: ENGINEERING AREA
