Require certain fields for articles

--- a/tests/fixtures/articles.yml
+++ b/tests/fixtures/articles.yml
@@ -15,3 +15,20 @@ JOURNAL_VOLUME: '1'
 JOURNAL_NAME: Bunnies
 MIT_ID: '123456789'
 PUBLISHER: MIT Press
+---
+AA_MATCH_SCORE: 0.9
+ARTICLE_ID: null
+ARTICLE_TITLE: null
+ARTICLE_YEAR: '1999'
+AUTHORS: Nobody
+DOI: null
+ISSN_ELECTRONIC: '0987654'
+ISSN_PRINT: '01234567'
+IS_CONFERENCE_PROCEEDING: '0'
+JOURNAL_FIRST_PAGE: '666'
+JOURNAL_LAST_PAGE: '666'
+JOURNAL_ISSUE: '10'
+JOURNAL_VOLUME: '1'
+JOURNAL_NAME: Bunnies
+MIT_ID: null
+PUBLISHER: MIT Press
