Make sure oracle client is using UTF-8

--- a/tests/fixtures/articles.yml
+++ b/tests/fixtures/articles.yml
@@ -1,9 +1,9 @@
 ---
 AA_MATCH_SCORE: 0.9
 ARTICLE_ID: '1234567'
-ARTICLE_TITLE: Interaction between hatsopoulos microfluids and the Yawning Abyss of Chaos.
+ARTICLE_TITLE: Interaction between hatsopoulos microfluids and the Yawning Abyss of Chaos ☈.
 ARTICLE_YEAR: '1999'
-AUTHORS: McRandallson, Randall M.|Lord, Dark
+AUTHORS: McRandallson, Randall M.|Lord, Dark|☭
 DOI: 10.0000/1234LETTERS56
 ISSN_ELECTRONIC: '0987654'
 ISSN_PRINT: '01234567'
