Add Makefile and support for pipenv
This switches to using pipenv as the primary means of managing
dependencies. The `make update` target should be used for updating
dependencies as this will also write out an updated `requirements.txt`
file that can be used when pipenv is not available.

--- a/tox.ini
+++ b/tox.ini
@@ -3,29 +3,20 @@ envlist = py27,py34,py35,coverage
 skipsdist = True
 
 [testenv]
-commands = py.test {posargs:--tb=short}
+passenv = HOME
 deps =
-    pytest
-    pyyaml
-    mock
-    requests-mock
-    -r{toxinidir}/requirements.txt
-
-[testenv:clean]
-commands = coverage erase
-deps = coverage
-
-[testenv:coverage]
-deps =
-    pytest-cov
-    {[testenv]deps}
-commands = py.test --cov=carbon {posargs}
+  pipenv
+  py27: mock
+  {coverage,coveralls}: pytest-cov
+  coveralls: coveralls
+setenv =
+  {coverage,coveralls}: PYTEST_COV="--cov=carbon"
+commands =
+  pipenv install --dev --system
+  py.test tests {env:PYTEST_COV:} {posargs:--tb=short}
 
 [testenv:coveralls]
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
-deps =
-    coveralls
-    {[testenv:coverage]deps}
 commands =
-    py.test --cov=carbon
-    coveralls
+  {[testenv]commands}
+  coveralls
