--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,15 @@ sudo: false
 notifications:
   email: false
 language: python
-env:
-  - TOX_ENV=py27
-  - TOX_ENV=py33
-  - TOX_ENV=py34
-  - TOX_ENV=coveralls
+matrix:
+  include:
+    - env: TOX_ENV=py27
+    - python: 3.4
+      env: TOX_ENV=py34
+    - python: 3.5
+      env: TOX_ENV=py35
+    - python: 3.5
+      env: TOX_ENV=coveralls
 install:
   - pip install tox
 script:
