--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
+requests==2.18.4
+py==1.4.34
+bumpversion==0.5.3
+idna==2.6
+docopt==0.6.2
+pytest==3.2.1
+setuptools==36.2.7
+coverage==4.4.1
 click==6.7
-lxml==3.7.3
-SQLAlchemy==1.1.6
+chardet==3.0.4
+coveralls==1.2.0
+sqlalchemy==1.1.13
+lxml==3.8.0
+certifi==2017.7.27.1
+urllib3==1.22
+pytest-cov==2.5.1
