Add flake8 to test suite
Closes #40. This adds a tox environment for flake8 and a corresponding
entry to the travis test matrix. Also fixes all the flake8 errors.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,coverage
+envlist = py36,coverage,flake8
 skipsdist = True
 
 [testenv]
@@ -8,6 +8,7 @@ deps =
   pipenv
   {coverage,coveralls}: pytest-cov
   coveralls: coveralls
+  flake8: flake8
 setenv =
   {coverage,coveralls}: PYTEST_COV="--cov=carbon"
 commands =
@@ -19,3 +20,7 @@ passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 commands =
   {[testenv]commands}
   coveralls
+
+[testenv:flake8]
+commands =
+  flake8 carbon
