Add check for existence of arrive date
We ran into a case where an individual does not have a start date which
caused the upload to fail. My documentation tells me that this field is
not required for the Elements feed, so the solution here is to just omit
the field when the data is not available.

--- a/tests/fixtures/data.yml
+++ b/tests/fixtures/data.yml
@@ -26,7 +26,7 @@ person:
     MIDDLE_NAME: Hǫlgabrúðr
     LAST_NAME: Hammerson
     EMAIL_ADDRESS: thor@example.com
-    ORIGINAL_HIRE_DATE: !!timestamp 2015-01-01 00:00:00.0
+    ORIGINAL_HIRE_DATE: null
     APPOINTMENT_END_DATE: !!timestamp 2999-12-31 00:00:00.0
     JOB_TITLE: Visiting Engineer
     PERSONNEL_SUBAREA_CODE: COAC
