Use shared deploy bucket
This switches to the new shared S3 deploy bucket for the Oracle lib. It
also adds another job to test stage to check that the container image
will build before running the deploy stage.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ script:
   - tox -e $TOX_ENV
 jobs:
   include:
+    - name: Build container
+      before_install: pip install pipenv awscli
+      install: pipenv install
+      script: make dist
     - stage: publish image
       install:
         - pip install pipenv awscli
