Add faculty start date to people feed
Why these changes are being introduced:
For faculty, sometimes the original hire date doesn't line up with the
faculty start date and that was causing problems in the OA workflow. A
new fields was added to the data warehouse table that gives us the
date a hire became faculty, which we want to use preferentially over the
original hire date when present.

How this addresses that need:
* Adds DATE_TO_FACULTY field to the persons model
* Retrieves DATE_TO_FACULTY field from the data warehouse as part of the
  person record
* Adds a method to map the DATE_TO_FACULTY field as ArriveDate in the
  people feed XML if present, otherwise continues as before and maps the
  ORIGINAL_HIRE_DATE to ArriveDate
* Updates tests/fixtures as needed

Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/INFRA-299

--- a/tests/fixtures/data.yml
+++ b/tests/fixtures/data.yml
@@ -7,6 +7,7 @@ person:
     LAST_NAME: Gaz
     EMAIL_ADDRESS: foobar@example.com
     ORIGINAL_HIRE_DATE: !!timestamp 2001-01-01 00:00:00.0
+    DATE_TO_FACULTY: Null
     APPOINTMENT_END_DATE: !!timestamp 2010-01-01 00:00:00.0
     JOB_TITLE: Adjunct Professor
     PERSONNEL_SUBAREA_CODE: CFAT
@@ -26,7 +27,8 @@ person:
     MIDDLE_NAME: Hǫlgabrúðr
     LAST_NAME: Hammerson
     EMAIL_ADDRESS: thor@example.com
-    ORIGINAL_HIRE_DATE: !!timestamp 2015-01-01 00:00:00.0
+    ORIGINAL_HIRE_DATE: !!timestamp 2010-01-01 00:00:00.0
+    DATE_TO_FACULTY: !!timestamp 2015-01-01 00:00:00.0
     APPOINTMENT_END_DATE: !!timestamp 2999-12-31 00:00:00.0
     JOB_TITLE: Visiting Engineer
     PERSONNEL_SUBAREA_CODE: COAC
@@ -47,6 +49,7 @@ person:
     MIDDLE_NAME: Says
     LAST_NAME: Super
     ORIGINAL_HIRE_DATE: !!timestamp 2015-01-01 00:00:00.0
+    DATE_TO_FACULTY: Null
     APPOINTMENT_END_DATE: !!timestamp 2999-01-01 00:00:00.0
     JOB_TITLE: Visiting Engineer
     PERSONNEL_SUBAREA_CODE: COAC
@@ -66,6 +69,7 @@ person:
     LAST_NAME: Else
     EMAIL_ADDRESS: thor@example.com
     ORIGINAL_HIRE_DATE: !!timestamp 2015-01-01 00:00:00.0
+    DATE_TO_FACULTY: Null
     APPOINTMENT_END_DATE: !!timestamp 2999-01-01 00:00:00.0
     JOB_TITLE: Visiting Engineer
     PERSONNEL_SUBAREA_CODE: COAC
@@ -85,6 +89,7 @@ person:
     MIDDLE_NAME: One
     EMAIL_ADDRESS: thor@example.com
     ORIGINAL_HIRE_DATE: !!timestamp 2015-01-01 00:00:00.0
+    DATE_TO_FACULTY: Null
     APPOINTMENT_END_DATE: !!timestamp 2999-01-01 00:00:00.0
     JOB_TITLE: Visiting Engineer
     PERSONNEL_SUBAREA_CODE: COAC
@@ -104,6 +109,7 @@ person:
     LAST_NAME: Else
     EMAIL_ADDRESS: thor@example.com
     ORIGINAL_HIRE_DATE: !!timestamp 2015-01-01 00:00:00.0
+    DATE_TO_FACULTY: Null
     APPOINTMENT_END_DATE: !!timestamp 2999-01-01 00:00:00.0
     JOB_TITLE: Visiting Engineer
     PERSONNEL_SUBAREA_CODE: COAC
