--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -1,5 +1,8 @@
 ### This is the Terraform-generated dev-build.yml workflow for the carbon-dev app repository ###
-name: Dev Build and Deploy Fargate Container
+### If this is a Lambda repo, uncomment the FUNCTION line at the end of the document         ###
+### If the container requires any additional pre-build commands, uncomment and edit          ###
+### the PREBUILD line at the end of the document.                                            ###
+name: Dev Container Build and Deploy
 on:
   workflow_dispatch:
   pull_request:
@@ -10,11 +13,12 @@ on:
 
 jobs:
   deploy:
-    name: Dev Deploy Fargate Container
-    uses: mitlibraries/.github/.github/workflows/fargate-shared-deploy-dev.yml@carbon-reqs
+    name: Dev Container Deploy
+    uses: mitlibraries/.github/.github/workflows/ecr-shared-deploy-dev.yml@main
     secrets: inherit
     with:
       AWS_REGION: "us-east-1"
       GHA_ROLE: "carbon-gha-dev"
       ECR: "carbon-dev"
-      DEPS: "make deps; make wheel"
+      # FUNCTION: ""
+      PREBUILD: "make install && make deps && make wheel"
