Fix PREBUILD value
Why these changes are being introduced:
The `make install` command requires that pipenv is already installed.

* Add one more command to the PREBUILD to force the installation
of pipenv to both dev-build.yml and stage-build.yml

--- a/.github/workflows/stage-build.yml
+++ b/.github/workflows/stage-build.yml
@@ -21,4 +21,4 @@ jobs:
       GHA_ROLE: "carbon-gha-stage"
       ECR: "carbon-stage"
       # FUNCTION: ""
-      PREBUILD: "make install && make deps && make wheel"
+      PREBUILD: "python -m pip install --upgrade pip pipenv && make install && make deps && make wheel"
