--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -21,4 +21,4 @@ jobs:
       GHA_ROLE: "carbon-gha-dev"
       ECR: "carbon-dev"
       # FUNCTION: ""
-      PREBUILD: "make install && make deps && make wheel"
+      PREBUILD: "python -m pip install --upgrade pip pipenv && make install && make deps && make wheel"
