Update GHA workflows

--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
     paths-ignore:
-      - '.github/**'
+      - ".github/**"
 
 jobs:
   deploy:
@@ -21,4 +21,4 @@ jobs:
       GHA_ROLE: "carbon-gha-dev"
       ECR: "carbon-dev"
       # FUNCTION: ""
-      PREBUILD: "python -m pip install --upgrade pip pipenv && make install && make deps && make wheel"
+      PREBUILD: "python -m pip install --upgrade pip pipenv && make install && make deps"
