--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,7 @@
-name: Tests
+name: CI
 on: push
 jobs:
   test:
-    name: Run tests
-    env:
-      COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
-      - name: Install
-        run: |
-          python -m pip install --upgrade pip pipenv
-          make install
-      - name: Tests
-        run: make coveralls
+    uses: mitlibraries/.github/.github/workflows/python-shared-test.yml@main
   lint:
-    name: Run linters
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
-      - name: Install
-        run: |
-          python -m pip install --upgrade pip pipenv
-          make install
-      - name: Lint
-        run: make lint
+    uses: mitlibraries/.github/.github/workflows/python-shared-lint.yml@main
