In 885 app stablization (#83)
* Dependency updates

Why these changes are being introduced:
* Updated dependencies are required for the Carbon refactor.

How this addresses that need:
* Update Makefile test command to provide more information
* Update Pipfile.lock via fresh install
* Update SQLAlchemy commands

Side effects of this change:
* None

Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/IN-885?atlOrigin=eyJpIjoiOGM2MGUxZGRmODFiNGUzYThlMzAzNTAwN2VhZjc1NTEiLCJwIjoiaiJ9

* Update to Python 3.11

Why these changes are being introduced:
* Keeping our Python versions updated is good practice and allows us to take advantage
of the latest security updates and bug fixes for Python.

How this addresses that need:
* Update Pipfile to use 3.11.
* Update python-version.

Side effects of this change:
* None

Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/IN-885?atlOrigin=eyJpIjoiOGM2MGUxZGRmODFiNGUzYThlMzAzNTAwN2VhZjc1NTEiLCJwIjoiaiJ9

* Update Dockerfile and ci.yml and address linting errors

Why these changes are being introduced:
* Align configuration of Carbon app with the rest of our containerized Python applications.

How this addresses that need:
* Update Docker image to use Python 3.11 and latest Oracle instant client library
* Simplify code in Dockerfile
* Update Makefile to download latest Oracle instant client library
* Replace cx-oracle with oracledb
* Update ci.yml to use shared workflows
* Resolve linting issues in app.py

Side effects of this change:
* None

Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/IN-885?atlOrigin=eyJpIjoiMDViM2VmZTlmMzI2NDIwYmFiYjFiZGMxMTYwMDMxNmQiLCJwIjoiaiJ9

* Update Makefile

Why these changes are being introduced:
* Simplify commands in Makefile for managing dependencies and running tests.

How this addresses that need:
* Clean up Makefile
* Refactor Make commands for installing and updating dependencies and running tests

--- a/Pipfile
+++ b/Pipfile
@@ -16,8 +16,11 @@ flake8 = "*"
 click = "*"
 lxml = "*"
 SQLAlchemy = "*"
-cx-oracle = "*"
+oracledb = "*"
 "boto3" = "*"
 
 [requires]
-python_version = "3.9"
+python_version = "3.11"
+
+[scripts]
+patronload = "python -c \"from carbon.cli import main; main()\""
