--- a/Pipfile
+++ b/Pipfile
@@ -18,9 +18,10 @@ lxml = "*"
 SQLAlchemy = "*"
 oracledb = "*"
 "boto3" = "*"
+sentry-sdk = "*"
 
 [requires]
 python_version = "3.11"
 
 [scripts]
-patronload = "python -c \"from carbon.cli import main; main()\""
+carbon = "python -c \"from carbon.cli import main; main()\""
