Add stub packages required by mypy to Pipfile
Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/IN-885

--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,10 @@ name = "pypi"
 [dev-packages]
 bandit = "*"
 black = "*"
+boto3-stubs = {extras = ["essential"], version = "*"}
 flake8 = "*"
 coveralls = "*"
+lxml-stubs = "*"
 mypy = "*"
 pytest = "*"
 pytest-cov = "*"
@@ -19,7 +21,6 @@ ruff = "*"
 
 [packages]
 boto3 = "*"
-boto3-stubs = {extras = ["essential"], version = "*"}
 click = "*"
 lxml = "*"
 oracledb = "*"
