--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,52 @@
 [tool.ruff]
+select = ["ALL", "PT"]
+
+ignore = [
+    # default
+    "ANN101", 
+    "ANN102", 
+    "COM812", 
+    "D107", 
+    "N812", 
+    "PTH", 
+
+    # project-specific
+    "C90",
+    "D100",
+    "D101", 
+    "D102",
+    "D103",
+    "D104", 
+    "PLR0912",
+    "PLR0913", 
+    "PLR0915",
+    "S320",
+    "S321", 
+]
+
+# allow autofix behavior for specified rules
+fixable = ["E", "F", "I", "Q"]
+
+# set max line length
 line-length = 90
+
+# enumerate all fixed violations
+show-fixes = true
+
+[tool.ruff.flake8-annotations]
+mypy-init-return = true
+
+[tool.ruff.flake8-pytest-style]
+fixture-parentheses = false
+
+[tool.ruff.per-file-ignores]
+"tests/**/*" = [
+    "ANN",
+    "S101",
+]
+
+[tool.ruff.pycodestyle]
+max-doc-length = 90
+
+[tool.ruff.pydocstyle]
+convention = "google"
