Rename test, apply pre-commit hooks, and update linting
* Rename test: nonconfigured_engine_raises_attributeerror
* Update Makefile to run mypy at root folder
* Add pre-commit hooks
* Include black and mypy configurations in pyproject.toml
* Small fix to resolve line-length for black
* Install stub package for 'setuptools'

--- a/Pipfile
+++ b/Pipfile
@@ -9,12 +9,14 @@ boto3-stubs = {extras = ["essential"], version = "*"}
 coveralls = "*"
 lxml-stubs = "*"
 mypy = "*"
+pre-commit = "*"
 pytest = "*"
 pytest-cov = "*"
 PyYAML = "*"
 pyftpdlib = "*"
 pyopenssl = "*"
 ruff = "*"
+types-setuptools = "*"
 
 
 [packages]
