--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
+[tool.black]
+line-length = 90
+
+[tool.mypy]
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+exclude = ["tests/"]
+
 [tool.ruff]
 select = ["ALL", "PT"]
 
@@ -42,6 +50,7 @@ fixture-parentheses = false
 [tool.ruff.per-file-ignores]
 "tests/**/*" = [
     "ANN",
+    "ARG001",
     "S101",
 ]
 
