In 885 app stabilization linters (#85)
* Apply black, mypy, ruff, safety
* Add pyproject.toml
* Add test to verify non-configured DatabaseEngine
result in 'AttributeError' when using callable
* Add Make command to apply changes to resolve linting issues
* Add pre-commit hooks
* Add dependabot
* Rerun fresh install of dependencies


Relevant ticket(s):
* https://mitlibraries.atlassian.net/browse/IN-885

--- a/Pipfile
+++ b/Pipfile
@@ -4,20 +4,28 @@ verify_ssl = true
 name = "pypi"
 
 [dev-packages]
+black = "*"
+boto3-stubs = {extras = ["essential"], version = "*"}
 coveralls = "*"
+lxml-stubs = "*"
+mypy = "*"
+pre-commit = "*"
 pytest = "*"
 pytest-cov = "*"
 PyYAML = "*"
 pyftpdlib = "*"
 pyopenssl = "*"
-flake8 = "*"
+ruff = "*"
+types-setuptools = "*"
+
 
 [packages]
+boto3 = "*"
 click = "*"
 lxml = "*"
-SQLAlchemy = "*"
 oracledb = "*"
-"boto3" = "*"
+SQLAlchemy = "*"
+
 sentry-sdk = "*"
 
 [requires]
