--- a/.github/workflows/stage-build.yml
+++ b/.github/workflows/stage-build.yml
@@ -21,4 +21,4 @@ jobs:
       GHA_ROLE: "carbon-gha-stage"
       ECR: "carbon-stage"
       # FUNCTION: ""
-      PREBUILD: "python -m pip install --upgrade pip pipenv && make install && make deps"
+      PREBUILD: "python -m pip install --upgrade pip pipenv && make install && make dependencies"
