--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ disallow_untyped_calls = true
 disallow_untyped_defs = true
 exclude = ["tests/"]
 
+[tool.pytest.ini_options]
+log_level = "INFO"
+
 [tool.ruff]
 target-version = "py311"
 
