Update to Python 3.12

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,35 +10,7 @@ exclude = ["tests/"]
 log_level = "INFO"
 
 [tool.ruff]
-target-version = "py311"
-
-select = ["ALL", "PT"]
-
-ignore = [
-    # default
-    "ANN101", 
-    "ANN102", 
-    "COM812", 
-    "D107", 
-    "N812", 
-    "PTH", 
-
-    # project-specific
-    "C90",
-    "D100",
-    "D101", 
-    "D102",
-    "D103",
-    "D104", 
-    "PLR0912",
-    "PLR0913", 
-    "PLR0915",
-    "S320",
-    "S321", 
-]
-
-# allow autofix behavior for specified rules
-fixable = ["E", "F", "I", "Q"]
+target-version = "py312"
 
 # set max line length
 line-length = 90
@@ -46,21 +18,50 @@ line-length = 90
 # enumerate all fixed violations
 show-fixes = true
 
-[tool.ruff.flake8-annotations]
+[tool.ruff.lint]
+select = ["ALL", "PT"]
+
+ignore = [
+    # default
+    "ANN101",
+    "ANN102",
+    "COM812",
+    "D107",
+    "N812",
+    "PTH",
+
+    # project-specific
+    "C90",
+    "D100",
+    "D101",
+    "D102",
+    "D103",
+    "D104",
+    "PLR0912",
+    "PLR0913",
+    "PLR0915",
+    "S320",
+    "S321",
+]
+
+# allow autofix behavior for specified rules
+fixable = ["E", "F", "I", "Q"]
+
+[tool.ruff.lint.flake8-annotations]
 mypy-init-return = true
 
-[tool.ruff.flake8-pytest-style]
+[tool.ruff.lint.flake8-pytest-style]
 fixture-parentheses = false
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/**/*" = [
     "ANN",
     "ARG001",
     "S101",
 ]
 
-[tool.ruff.pycodestyle]
+[tool.ruff.lint.pycodestyle]
 max-doc-length = 90
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
