--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,7 @@ pyftpdlib = "*"
 pyopenssl = "*"
 ruff = "*"
 types-setuptools = "*"
-
+safety = "*"
 
 [packages]
 boto3 = "*"
@@ -27,11 +27,10 @@ click = "*"
 lxml = "*"
 oracledb = "*"
 SQLAlchemy = "*"
-
 sentry-sdk = "*"
 
 [requires]
-python_version = "3.11"
+python_version = "3.12"
 
 [scripts]
 carbon = "python -c \"from carbon.cli import main; main()\""
